--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
+
 <html>
   <head>
+    <script src="https://kit.fontawesome.com/1d3bd96125.js" crossorigin="anonymous"></script>
     <title>Bookers2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,12 +12,31 @@
   </head>
 
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          
     <%= link_to "Bookers", '/' %>
     <% if user_signed_in? %>
+      <li>
+        <%= link_to "Home", '/'%>
+      </li>
+      <li>
+        <%= link_to "Users", '/users/show.html' %>
+      </li>
+      <li>
+        <%= link_to "Books", '/books/show.html' %>
+      </li>
       <li>
         <%= link_to "logout", destroy_user_session_path, method: :delete %>
       </li>
     <% else %>
+      <li>
+        <%= link_to "Home", '/'%>
+      </li>
+      <li>
+        <%= link_to "About", '/homes/about.html' %>
+      </li>
       <li>
         <%= link_to "signup", new_user_registration_path %>
       </li>
@@ -23,6 +44,20 @@
         <%= link_to "login", new_user_session_path %>
       </li>
       <% end %>
+      </div>
+      </nav>
+      </header>
+
+      <footer>
+        <div class='container mt-5'>
+  	     <div class='row'>
+    	    <div class='mx-auto'>
+    	     	<p>CopyRight Infratop.inc</p>
+         	</div>
+         </div>
+       </div>
+      </footer>
     <%= yield %>
+
   </body>
 </html>
