--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,7 @@
- <h1>welcome to <i class="fas fa-book"></i><strong>Bookers</strong>  !!</h1>
+ <div class='container mt-5'>
+  	     <div class='row'>
+    	    <div class='mx-auto'>
+               <h1>welcome to <i class="fas fa-book"></i><strong>Bookers</strong>  !!</h1>
+             </div>
+         </div>
+ </div>
