--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          
+
     <%= link_to "Bookers", '/' %>
     <% if user_signed_in? %>
       <li>
@@ -30,6 +30,18 @@
       <li>
         <%= link_to "logout", destroy_user_session_path, method: :delete %>
       </li>
+      
+       <main>
+        <h1>New Book</h1>
+        
+        
+        
+      </main>
+      
+      
+      
+      
+      
     <% else %>
       <li>
         <%= link_to "Home", '/'%>
@@ -47,7 +59,10 @@
       </div>
       </nav>
       </header>
+     
 
+    <%= yield %>
+   
       <footer>
         <div class='container mt-5'>
   	     <div class='row'>
@@ -57,7 +72,7 @@
          </div>
        </div>
       </footer>
-    <%= yield %>
+
 
   </body>
 </html>
