--- a/app/views/users/tmp_userinfo.html.erb
+++ b/app/views/users/tmp_userinfo.html.erb
@@ -3,6 +3,7 @@
       <%= attachment_image_tag @user, :attachment_image_tag, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
   <tbody><tr></tr>
   <tr>
+    <%= @users.name %>
 	  <!--<th>name</th>-->
 	  <!--<th>dmm</th>-->
   </tr>
