--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,19 +1,37 @@
-<%= render 'users/userinfo' %>
+<!--<%#= render 'users/userinfo' %>-->
 
 
 
-<!--<h1>User Info</h1>-->
-<!--<%#= attachment_image_tag @user, :attachment_image_tag, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>-->
-<!--<p><h2>name</h2> <%#= @name.user.name %></p>-->
-<!--<h2>introduction</h2>-->
+<h1>User Info</h1>
+<%= attachment_image_tag @user, :attachment_image_tag, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+
+<br>
+<% if user_signed_in? %>
+
+<tr>
+  <th>name</th>
+ <th><%= current_user.name %></th>
+</tr>
+<br>
+<tr>
+ <td>introduction</td>
+ <td><%= current_user.introduction %></td>
+ </tr>
+ <%= link_to ""
+
+
+<% end %>
 
 
 
-<!--<h1>New Book</h1>-->
-<!--<%#= form_with model: @book, url:'/books', local:true do |f| %>-->
-<!--  <h4>Title</h4>-->
-<!--  <%#= f.text_field :title %>-->
-<!--  <h4>Option</h4>-->
-<!--  <%#= f.text_area :body %>-->
-<!--  <%#= f.submit 'Create Book' %>-->
-<!--<%# end %>-->
+
+
+
+<h1>New Book</h1>
+<%= form_with model: @book, url:'/books', local:true do |f| %>
+  <h4>Title</h4>
+  <%= f.text_field :title %>
+  <h4>Option</h4>
+  <%= f.text_area :body %>
+  <%= f.submit 'Create Book' %>
+<% end %>
