add index finish

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -41,17 +41,35 @@
 <% end %>
    </div>
    <div class="col-8">
-
-     <h1>Book detail</h1>
+     <h1>Books</h1>
+     <table class="table">
+       <thead>
+       <tr>
+        <th></th>
+        <th>Title</th>
+        <th>Opinion</th>
+      </tr>
+       </thead>
+       <tbody>
      <% @books.each do |book| %>
-     <p>
+     <tr>
+       <td>
+       <%= link_to user_path(current_user.id) do %>
        <%= attachment_image_tag @user, :attachment_image_tag, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
-       <%= book.title %>
-       <%= book.body %>
-      </p>
        <% end %>
+       </td>
+       <td>
+       <%= link_to book.title, "books/#{book.id}" %>
+       </td>
+       <td>
+       <%= book.body %>
+      </td>
+       <% end %>
+       </tr>
+       </tbody>
+       </table>
+    </div>
 
 
-   </div>
   </div>
 </div>
