--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,1 +1,24 @@
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
 <%= render 'users/userinfo' %>
+    </div>
+
+    <div class="col-md-8 offset-md-1">
+  		<h2>Book detail</h2>
+  		<table class="table">
+  		  <tbody><tr>
+          <td>
+           <%= link_to user_path(current_user.id) do %>
+           <%= attachment_image_tag @user, :attachment_image_tag, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+           <br>
+           <%= current_user.name %>
+           <% end %>
+          </td>
+          <td><%= link_to @book.title %></td>
+          <td><%= @book.body %></td>
+        </tr>
+      </tbody></table>
+    </div>
+  </div>
+</div>
