--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,6 +17,7 @@
           </td>
           <td><%= link_to @book.title %></td>
           <td><%= @book.body %></td>
+          <td><%= link_to "edit", edit_book_path(@book.id) %></td>
         </tr>
       </tbody></table>
     </div>
