--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,7 +7,8 @@
     <div class="col-md-8 offset-md-1">
   		<h2>Book detail</h2>
   		<table class="table">
-  		  <tbody><tr>
+  		  <tbody>
+  		    <tr>
           <td>
            <%= link_to user_path(current_user.id) do %>
            <%= attachment_image_tag @user, :attachment_image_tag, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
@@ -17,9 +18,13 @@
           </td>
           <td><%= link_to @book.title %></td>
           <td><%= @book.body %></td>
+          <% if @book.user == current_user %>
           <td><%= link_to "edit", edit_book_path(@book.id) %></td>
-        </tr>
-      </tbody></table>
+          <td><%= link_to "destroy", destroy_book_path(@book.id), method: :delete, "data-confirm" => "本当に消しますか？" %></td>
+          <% end %>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
