--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,31 +1,33 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
-      <%= render 'userinfo' %>
+<%= render 'userinfo' %>
     </div>
     <div class="col-md-8 offset-md-1">
-      <h2>Books</h2>
-      <table class="table table-hover table-inverse">
+      <h2>Users</h2>
+      <table class="table">
   <thead>
     <tr>
-      <th></th>
-      <th>Title</th>
-      <th>Opinion</th>
+      <th>image</th>
+      <th>name</th>
       <th colspan="3"></th>
     </tr>
   </thead>
+
+
   <tbody>
-     <% @users.each do |user| %>
+    <% @users.each do |user| %>
       <tr>
 
         <td><%= attachment_image_tag @user, :attachment_image_tag, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></td>
-
-        <td><%= link_to user.title %> </td>
-        <td><%= user.body %></td>
+        <td><%= user.name %></td>
+        <td><%= link_to "show", "/users/#{user.id}" %> </td>
       </tr>
       <% end %>
+
   </tbody>
 </table>
+
     </div>
   </div>
 </div>
