--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,8 +1,32 @@
-<h1>Editing Book</h1>
-<%= form_with model:@book, url:"/books/#{@book.id}", local:true do |f| %>
-  <h4>Title</h4>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+  		<h1>Editing Book</h1>
+
+
+  <%= form_with model:@book, url:"/books/#{@book.id}", local:true do |f| %>
+  <div class="form-group">
+    <h4>Title</h4>
   <%= f.text_field :title %>
-  <h4>Opinion</h4>
+  </div>
+  <div class="form-group">
+    <h4>Opinion</h4>
   <%= f.text_area :body %>
-  <%= f.submit 'Update Book' %>
+  </div>
+  <div class="form-group">
+    <%= f.submit 'Update Book' %>
+  </div>
+</form>
 <% end %>
+  		<%= link_to "show", "/books#{book.id}" %> |
+  		<a class="back" href="/books">Back</a>
+  </div>
+</div>
+      </div>
+
+
+
+
+
+
+
