--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -59,7 +59,7 @@
        <% end %>
        </td>
        <td>
-       <%= link_to book.title, "books/#{book.id}" %>
+       <%= link_to book.title, "/books/#{book.id}" %>
        </td>
        <td>
        <%= book.body %>
