--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,7 +21,10 @@
 
           <td><%= link_to "edit", edit_book_path(@book.id) %></td>
 
-          <td><%= link_to "destroy", destroy_book_path(@book.id), method: :delete, "data-confirm" => "本当に消しますか？" %></td>
+          <td><% if @book.user == current_user %>
+              <%= link_to "delete", book_path(@book), method: :delete %>
+              <% end %>
+          </td>
           </tr>
         </tbody>
       </table>
