--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,10 +22,10 @@
         <%= link_to "Home", '/'%>
       </li>
       <li>
-        <%= link_to "Users", '/users/show.html' %>
+        <%= link_to "Users", '/users/index.html' %>
       </li>
       <li>
-        <%= link_to "Books", '/books/show.html' %>
+        <%= link_to "Books", '/books/index.html' %>
       </li>
       <li>
         <%= link_to "logout", destroy_user_session_path, method: :delete %>
@@ -58,7 +58,9 @@
       </div>
       </nav>
       </header>
-
+ <% flash.each do |key, value| %>
+    <%= content_tag(:div, value, class: "#{key}") %>
+  <% end %>
 
     <%= yield %>
 
@@ -75,3 +77,5 @@
 
   </body>
 </html>
+
+
