--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,3 +4,34 @@
 <!--  <%#= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>-->
 <!--  <%#= f.submit "変更を保存" %>-->
 <!--<%# end %>-->
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+    <h2>User info</h2>
+   <%= form_with model:@user, local:true do |f| %>
+
+      <div class="form-group">
+        <label for="user_name">Name</label>
+         <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
+      </div>
+     <div class="form-group">
+        <label for="user_image">Image</label>
+        <%= attachment_image_tag @user, :profile_image_id, :fill, 60, 60, fallback: "no_image.jpg"%>
+  <label for="inputImage">ProfileImage</label>
+  <%= f.attachment_field :profile_image_id, placeholder: "プロフィール画像" %>
+      </div>
+      <div class="form-group">
+        <label for="user_introduction">Introduction</label>
+
+      </div>
+      <div class="form-group">
+       <%= f.submit "Update User" %>
+      </div>
+</form>
+<% end %>
+</div>
+</div>
+
+      </div>
