--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3">
-<%= render 'users/userinfo' %>
+<%= render '/users/userinfo', user: @user, book: @book_new %>
     </div>
 
     <div class="col-md-8 offset-md-1">
@@ -11,12 +11,12 @@
   		    <tr>
           <td>
            <%= link_to user_path(current_user.id) do %>
-           <%= attachment_image_tag @user, :attachment_image_tag, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+           <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
            <br>
            <%= current_user.name %>
            <% end %>
           </td>
-          <td><%= link_to @book.title %></td>
+          <td><%= link_to @book.title, book_path(@book.id) %></td>
           <td><%= @book.body %></td>
 
           <td><%= link_to "edit", edit_book_path(@book.id) %></td>
