--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,13 +19,13 @@
     <%= link_to "Bookers", '/' %>
     <% if user_signed_in? %>
       <li>
-        <%= link_to "Home", '/'%>
+        <%= link_to "Home", user_path(current_user.id)%>
       </li>
       <li>
-        <%= link_to "Users", '/users/index.html' %>
+        <%= link_to "Users", users_path %>
       </li>
       <li>
-        <%= link_to "Books", '/books/index.html' %>
+        <%= link_to "Books", books_path %>
       </li>
       <li>
         <%= link_to "logout", destroy_user_session_path, method: :delete %>
