--- a/app/views/users/_userinfo.html.erb
+++ b/app/views/users/_userinfo.html.erb
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-4">
 <h1>User Info</h1>
-<%= attachment_image_tag @user, :attachment_image_tag, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+<%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
 
 <br>
 <% if user_signed_in? %>
@@ -20,7 +20,7 @@
  <td><%= current_user.introduction %></td>
  </tr>
  <p>
- <%= link_to "edit", user_path(current_user.id) %>
+ <%= link_to "edit", edit_user_path(current_user.id) %>
 </p>
 
 
@@ -32,7 +32,7 @@
 
 
 <h1 class="mt-3">New Book</h1>
-<%= form_with model: @book, url:'/books', local:true do |f| %>
+<%= form_with model: book, local:true do |f| %>
   <h4>Title</h4>
   <%= f.text_field :title %>
   <h4>Option</h4>
