--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -18,9 +18,9 @@
       </div>
      <div class="form-group">
         <label for="user_image">Image</label>
-        <%= attachment_image_tag @user, :profile_image_id, :fill, 60, 60, fallback: "no_image.jpg"%>
+        <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
   <label for="inputImage">ProfileImage</label>
-  <%= f.attachment_field :profile_image_id, placeholder: "プロフィール画像" %>
+  <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
       </div>
       <div class="form-group">
         <label for="user_introduction">Introduction</label>
