--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
-<%= render 'userinfo' %>
+<%= render 'userinfo',user: @user, book: @book %>
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Users</h2>
@@ -19,7 +19,7 @@
     <% @users.each do |user| %>
       <tr>
 
-        <td><%= attachment_image_tag @user, :attachment_image_tag, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></td>
+        <td><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></td>
         <td><%= user.name %></td>
         <td><%= link_to "show", "/users/#{user.id}" %> </td>
       </tr>
