--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
-      <%= render 'userinfo' %>
+      <%= render 'userinfo', user: @user %>
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
@@ -15,13 +15,13 @@
     </tr>
   </thead>
   <tbody>
-     <% @users.each do |user| %>
+     <% @books.each do |book| %>
       <tr>
 
-        <td><%= attachment_image_tag @user, :attachment_image_tag, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></td>
+        <td><%= attachment_image_tag book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></td>
 
-        <td><%= link_to user.title %> </td>
-        <td><%= user.body %></td>
+        <td><%= link_to book.title %> </td>
+        <td><%= book.body %></td>
       </tr>
       <% end %>
   </tbody>
