--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -18,7 +18,7 @@
   </div>
 </form>
 <% end %>
-  		<%= link_to "show", "/books#{book.id}" %> |
+  		<%= link_to "show", "/books/#{@book.id}" %> |
   		<a class="back" href="/books">Back</a>
   </div>
 </div>
