--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -14,7 +14,7 @@
 
       <div class="form-group">
         <label for="user_name">Name</label>
-         <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
+         <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:""%>
       </div>
      <div class="form-group">
         <label for="user_image">Image</label>
@@ -24,12 +24,13 @@
       </div>
       <div class="form-group">
         <label for="user_introduction">Introduction</label>
+        <%= f.text_field :introduction, autofocus: true, placeholder:"Introduction"%>
 
       </div>
       <div class="form-group">
        <%= f.submit "Update User" %>
       </div>
-</form>
+<!--</form>-->
 <% end %>
 </div>
 </div>
