--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-4">
 <h1>User Info</h1>
-<%= attachment_image_tag @user, :attachment_image_tag, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+<%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
 
 <br>
 <% if user_signed_in? %>
@@ -55,7 +55,7 @@
      <tr>
        <td>
        <%= link_to user_path(current_user.id) do %>
-       <%= attachment_image_tag @user, :attachment_image_tag, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+       <%= attachment_image_tag book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
        <% end %>
        </td>
        <td>
