--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,6 +4,14 @@
   		<h1>Editing Book</h1>
 
 
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this obj from being saved:
+  <% @book.errors.full_messages.each do |message| %>
+    <%= message %>
+  <% end %>
+<% end %>
+
+
   <%= form_with model:@book, url:"/books/#{@book.id}", local:true do |f| %>
   <div class="form-group">
     <h4>Title</h4>
