--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,8 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-3">
+   
 <%= render '/users/userinfo', user: @user, book: @book_new %>
-    </div>
 
     <div class="col-md-8 offset-md-1">
   		<h2>Book detail</h2>
@@ -19,8 +18,12 @@
           <td><%= link_to @book.title, book_path(@book.id) %></td>
           <td><%= @book.body %></td>
 
-          <td><%= link_to "edit", edit_book_path(@book.id) %></td>
 
+
+
+　　　　　　　<% if @book.user == current_user %>
+          <td><%= link_to "edit", edit_book_path(@book.id) %></td>
+　　　　　　　<% end %>
           <td><% if @book.user == current_user %>
               <%= link_to "delete", book_path(@book), method: :delete %>
               <% end %>
