--- a/app/views/users/_userinfo.html.erb
+++ b/app/views/users/_userinfo.html.erb
@@ -1,49 +1,29 @@
-<!--<%#= render 'users/userinfo' %>-->
-
-
-<div class="container">
-  <div class="row">
-    <div class="col-4">
-<h1>User Info</h1>
-<%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
-
-<br>
-<% if user_signed_in? %>
-
-<tr>
-  <th>name</th>
- <th><%= current_user.name %></th>
-</tr>
-<br>
-<tr>
- <td>introduction</td>
- <td><%= current_user.introduction %></td>
- </tr>
- <p>
- <%= link_to "edit", edit_user_path(current_user.id) %>
-</p>
-
-
-<% end %>
-
-
-
-
-
-
-<h1 class="mt-3">New Book</h1>
-<%= form_with model: book, local:true do |f| %>
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-  <h4>Option</h4>
-  <%= f.text_area :body %>
-  <%= f.submit 'Create Book' %>
-<% end %>
-   </div>
-   <div class="col-8">
-
+<div class="col-md-3">
+    <h2>User Info</h2>
+    <%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+    <table class="table">
+        <tbody>
+            <tr></tr>
+            <tr>
+                <th>name</th>
+                <th><%= user.name %></th>
+            </tr>
+            <tr>
+                <th>introduction</th>
+                <th><%= user.introduction %></th>
+            </tr>
+        </tbody>
+    </table>
+    <div class="row">
+        <%= link_to "edit", edit_user_path(current_user.id) %>
     </div>
-
-
-  </div>
+    <h2 class="mt-3">New Book</h2>
+    <%= form_with model: book, local:true do |f| %>
+        <h4>Title</h4>
+        <%= f.text_field :title %>
+        <h4>Option</h4>
+        <%= f.text_area :body %>
+        <%= f.submit 'Create Book' %>
+    <% end %>
 </div>
+   
