--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,6 +10,17 @@
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
     <h2>User info</h2>
+    <% if @user.errors.any? %>
+      <%= @user.errors.count %>error prohibited this obj from being saved:
+        <% @user.errors.full_messages.each do |message| %>
+        <%= message %>
+      <% end %>
+    <% end %>
+
+
+
+
+
    <%= form_with model:@user, local:true do |f| %>
 
       <div class="form-group">
