--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,7 @@
 
         <td><%= attachment_image_tag book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></td>
 
-        <td><%= link_to book.title %> </td>
+        <td><%= link_to book.title, book_path(book.id) %> </td>
         <td><%= book.body %></td>
       </tr>
       <% end %>
