--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
         <%= link_to "About", '/homes/about.html' %>
       </li>
       <li>
-        <%= link_to "signup", new_user_registration_path %>
+        <%= link_to "Sign Up", new_user_registration_path %>
       </li>
       <li>
         <%= link_to "login", new_user_session_path %>
