--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,42 +18,54 @@
 
     <%= link_to "Bookers", root_path %>
     <% if user_signed_in? %>
+        <ul class="navbar-nav ml-auto">
       <li>
-        <%= link_to "Home", user_path(current_user.id)%>
+
+        <%= link_to "Home", user_path(current_user.id),class:"fas fa-home nav-link text-light"%>
+
       </li>
       <li>
-        <%= link_to "Users", users_path %>
+
+        <%= link_to "Users", users_path,class:"fas fa-users nav-link text-light" %>
+
       </li>
       <li>
-        <%= link_to "Books", books_path %>
+
+        <%= link_to "Books", books_path,class:"fas fa-book-open nav-link text-light" %>
       </li>
       <li>
-        <%= link_to "logout", destroy_user_session_path, method: :delete %>
+
+        <%= link_to "logout", destroy_user_session_path,class:"fas fa-sign-out-alt nav-link text-light", method: :delete %>
+
       </li>
-
-       <main>
-
-
-
-      </main>
-
-
-
-
+   </ul>
+      <!-- <main>-->
+      <!--</main>-->
 
     <% else %>
+    <ul class="navbar-nav ml-auto">
       <li>
+        <a class="fas fa-home nav-link text-light">
         <%= link_to "Home", root_path %>
+        </a>
       </li>
       <li>
-        <%= link_to "About", homes_about_path %>
+        <a class="fas fa-link nav-link text-light">
+        <%= link_to "About", home_about_path %>
+        </a>
       </li>
       <li>
+        <a class="fas fa-user-plus nav-link text-light">
         <%= link_to "Sign Up", new_user_registration_path %>
+        </a>
       </li>
       <li>
-        <%= link_to "login", new_user_session_path %>
+        <a class="fas fa-sign-in-alt nav-link text-light">
+        <%= link_to "Log in", new_user_session_path %>
+        </a>
       </li>
+      </ul>
+
       <% end %>
       </div>
       </nav>
