--- a/app/views/users/_userinfo.html.erb
+++ b/app/views/users/_userinfo.html.erb
@@ -15,9 +15,13 @@
         </tbody>
     </table>
     <div class="row">
-        <%= link_to "edit", edit_user_path(current_user.id) %>
+
+        <%= link_to edit_user_path(current_user.id),class:"btn btn-outline-secondary btn-block" do %>
+        <i class="fas fa-user-cog"></i>
+        <% end %>
+
     </div>
-    <h2 class="mt-3">New Book</h2>
+    <h2 class="mt-3">New book</h2>
     <%= form_with model: book, local:true do |f| %>
         <h4>Title</h4>
         <%= f.text_field :title %>
@@ -26,4 +30,3 @@
         <%= f.submit 'Create Book' %>
     <% end %>
 </div>
-   
