--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,30 +39,30 @@
 
       </li>
    </ul>
-      <!-- <main>-->
-      <!--</main>-->
+       <main>
+      </main>
 
     <% else %>
     <ul class="navbar-nav ml-auto">
       <li>
-        <a class="fas fa-home nav-link text-light">
-        <%= link_to "Home", root_path %>
-        </a>
+
+        <%= link_to "Home", root_path,class:"fas fa-home nav-link text-light" %>
+
       </li>
       <li>
-        <a class="fas fa-link nav-link text-light">
-        <%= link_to "About", home_about_path %>
-        </a>
+
+        <%= link_to "About", home_about_path,class:"fas fa-link nav-link text-light" %>
+
       </li>
       <li>
-        <a class="fas fa-user-plus nav-link text-light">
-        <%= link_to "Sign Up", new_user_registration_path %>
-        </a>
+
+        <%= link_to "Sign Up", new_user_registration_path,class:"fas fa-user-plus nav-link text-light" %>
+
       </li>
       <li>
-        <a class="fas fa-sign-in-alt nav-link text-light">
-        <%= link_to "Log in", new_user_session_path %>
-        </a>
+
+        <%= link_to "Log in", new_user_session_path,class:"fas fa-sign-in-alt nav-link text-light" %>
+
       </li>
       </ul>
 
