--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,48 +9,9 @@
   <% end %>
 <% end %>
   <div class="row">
-    <div class="col-4">
-        
-      
-        
-<h1>User Info</h1>
-<%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
 
-<br>
-<% if user_signed_in? %>
+<%= render '/users/userinfo', user: @user, book: @book %>
 
-<tr>
-  <th>name</th>
- <th><%= current_user.name %></th>
-</tr>
-<br>
-<tr>
- <td>introduction</td>
- <td><%= current_user.introduction %></td>
- </tr>
- <p>
- <%= link_to "edit", user_path(current_user.id) %>
-</p>
-
-
-<% end %>
-
-
-
-
-
-
-<h1 class="mt-3">New Book</h1>
-
-
-<%= form_with model: @book, url:'/books', local:true do |f| %>
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-  <h4>Option</h4>
-  <%= f.text_area :body %>
-  <%= f.submit 'Create Book' %>
-<% end %>
-   </div>
    <div class="col-8">
      <h1>Books</h1>
      <table class="table">
