--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-   
+
 <%= render '/users/userinfo', user: @user, book: @book_new %>
 
     <div class="col-md-8 offset-md-1">
@@ -12,7 +12,7 @@
            <%= link_to user_path(current_user.id) do %>
            <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
            <br>
-           <%= current_user.name %>
+           <%= @user.name %>
            <% end %>
           </td>
           <td><%= link_to @book.title, book_path(@book.id) %></td>
