--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -3,3 +3,13 @@
       <p>In  <i class="fas fa-book"></i><strong>Bookers</strong>, </p>
       <p>you can share and exchange  your opinions , inpressions , and emotions</p>
       <p> about various books!</p>
+      <div class="row">
+      <%= link_to "Log in", new_user_session_path,class:"btn btn-info btn-sm btn-block mb-3 sugn_in" %>
+
+      </div>
+
+      <div class="row">
+      <%= link_to "Sign up", new_user_registration_path,class:"btn btn-success btn-sm btn-block sign_up" %>
+
+
+      </div>
