--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
       </li>
       <li>
 
-        <%= link_to "Log in", new_user_session_path,class:"fas fa-sign-in-alt nav-link text-light" %>
+        <%= link_to "login", new_user_session_path,class:"fas fa-sign-in-alt nav-link text-light" %>
 
       </li>
       </ul>
