--- a/app/views/users/_userinfo.html.erb
+++ b/app/views/users/_userinfo.html.erb
@@ -6,7 +6,7 @@
             <tr></tr>
             <tr>
                 <th>name</th>
-                <!--<th><%= user.name %></th>-->
+                <th><%= user.name %></th>
             </tr>
             <tr>
                 <th>introduction</th>
