--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,7 +12,7 @@
 
 <%= render '/users/userinfo', user: @user, book: @book %>
 
-   <div class="col-8">
+   <div class="col-md-8 offset-md-1">
      <h1>Books</h1>
      <table class="table">
        <thead>
