fix book show page

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -26,7 +26,7 @@
   </div>
 </form>
 <% end %>
-  		<%= link_to "show", "/books/#{@book.id}" %> |
+  		<%= link_to "Show", "/books/#{@book.id}" %> |
   		<a class="back" href="/books">Back</a>
   </div>
 </div>
