--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,7 +21,7 @@
 
         <td><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></td>
         <td><%= user.name %></td>
-        <td><%= link_to "show", "/users/#{user.id}" %> </td>
+        <td><%= link_to "Show", "/users/#{user.id}" %> </td>
       </tr>
       <% end %>
 
