--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -26,8 +26,9 @@
      <% @books.each do |book| %>
      <tr>
        <td>
-       <%= link_to user_path(current_user.id) do %>
-       <%= attachment_image_tag book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+           <% user = User.find_by(id: book.user_id) %>
+       <%= link_to user_path(user.id) do %>
+       <%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
        <% end %>
        </td>
        <td>
