--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,10 +22,10 @@
 
 
 　　　　　　　<% if @book.user == current_user %>
-          <td><%= link_to "edit", edit_book_path(@book.id) %></td>
+          <td><%= link_to "Edit", edit_book_path(@book.id) %></td>
 　　　　　　　<% end %>
           <td><% if @book.user == current_user %>
-              <%= link_to "delete", book_path(@book), method: :delete %>
+              <%= link_to "Destroy", book_path(@book), method: :delete %>
               <% end %>
           </td>
           </tr>
