--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,7 +9,8 @@
   		  <tbody>
   		    <tr>
           <td>
-           <%= link_to user_path(current_user.id) do %>
+              <!--<%# user = User.find_by(id: book.user_id) %>-->
+           <%= link_to user_path(@user.id) do %>
            <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
            <br>
            <%= @user.name %>
