--- a/app/views/users/_userinfo.html.erb
+++ b/app/views/users/_userinfo.html.erb
@@ -16,7 +16,7 @@
     </table>
     <div class="row">
 
-        <%= link_to edit_user_path(current_user.id),class:"btn btn-outline-secondary btn-block" do %>
+        <%= link_to edit_user_path(user.id),class:"btn btn-outline-secondary btn-block" do %>
         <i class="fas fa-user-cog"></i>
         <% end %>
 
