--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,9 +17,10 @@
   <tbody>
      <% @books.each do |book| %>
       <tr>
-
-        <td><%= attachment_image_tag book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></td>
-
+　　　　 <% user = User.find_by(id: book.user_id) %>
+　　　　<td> <%= link_to user_path(user.id) do %>
+        <%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+         <% end %></td>
         <td><%= link_to book.title, book_path(book.id) %> </td>
         <td><%= book.body %></td>
       </tr>
